--- a/package.json
+++ b/package.json
@@ -72,6 +72,6 @@
         "vscode-builtin-xml": "https://github.com/theia-ide/vscode-builtin-extensions/releases/download/v1.39.1-prel/xml-1.39.1-prel.vsix",
         "vscode-builtin-yaml": "https://github.com/theia-ide/vscode-builtin-extensions/releases/download/v1.39.1-prel/yaml-1.39.1-prel.vsix",
         "vscode-editorconfig": "https://github.com/theia-ide/editorconfig-vscode/releases/download/v0.14.4/EditorConfig-0.14.4.vsix",
-		"galileo-theme": "https://github.com/GoHypernet/galileo-IDE-theme/releases/download/0.0.2/Hypernetlabs.galileo-theme-0.0.2.vsix"
+		"galileo-theme": "https://github.com/GoHypernet/galileo-IDE-theme/releases/download/0.0.3/galileo-theme-0.0.3.vsix"
     }
 }
