fix: vector base images

--- a/vector-container/http.cfg
+++ b/vector-container/http.cfg
@@ -15,54 +15,12 @@ defaults
   timeout connect 3000    # 3 seconds
   timeout server  300000  # 5 minutes
 
-frontend public_http
-  acl nats_ws_path path_beg /ws-nats
-  acl dashboard_path path_beg /dashboard
-  acl static_path path_beg /static
-  acl next_path path_beg /_next
-  acl api_path path_beg /api
-  acl node_path path_beg /node
-  bind *:80
-  default_backend auth
-  http-response del-header Access-Control-Allow-Headers
-  http-response del-header Access-Control-Allow-Methods
-  http-response del-header Access-Control-Allow-Origin
-  http-response add-header Access-Control-Allow-Headers "*"
-  http-response del-header Access-Control-Allow-Methods
-  http-response add-header Access-Control-Allow-Origin "*"
-  option forwardfor
-  use_backend nats_ws if nats_ws_path
-  use_backend dashboard if dashboard_path
-  use_backend dashboard if static_path
-  use_backend dashboard if next_path
-  use_backend dashboard if api_path
-  use_backend node if node_path
-
-frontend public_nats_tcp
-  bind *:4222
-  default_backend nats_tcp
-  mode tcp
-  option tcplog
-
-backend dashboard
-  mode http
-  http-request replace-path /dashboard /
-  server dashboard "localhost:3000"
-
 backend node
   mode http
   http-request replace-path /node /
   server node "localhost:8001"
 
-backend nats_tcp
-  mode tcp
-  server nats "$VECTOR_NATS_TCP_URL"
-
-backend nats_ws
-  http-request replace-path /ws-nats /
-  http-response add-header Access-Control-Allow-Methods "GET, OPTIONS"
-  server nats "$VECTOR_NATS_WS_URL"
-
-backend auth
-  http-response add-header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-  server auth "$VECTOR_AUTH_URL"
+backend router
+  mode http
+  http-request replace-path /router /
+  server router "localhost:8008"
