fix: dockerfile added

--- a/vector-container/supervisord.conf
+++ b/vector-container/supervisord.conf
@@ -1,35 +1,38 @@
+[supervisord]
+nodaemon=true
+pidfile=/tmp/supervisord.pid
+logfile=/dev/fd/1
+logfile_maxbytes=0
+
 [program:node]
-redirect_stderr=true
-stdout_logfile=/proc/1/fd/1
+autorestart=true
+stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
-autostart=true
-autorestart=false
-startretries=3
+redirect_stderr=true
+startretries=1
 priority=2
 command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && export PORT=8002 && cd /root/node && /root/node/ops/entry.sh"
 environment=PORT="8001",VECTOR_ENV="dev",VECTOR_PROD="true",VECTOR_MNEMONIC="candy maple cake sugar pudding cream honey rich smooth crumble sweet treat",VECTOR_MNEMONIC_FILE="",VECTOR_PG_DATABASE="vector",VECTOR_PG_HOST="postgres",VECTOR_PG_PASSWORD="vector",VECTOR_PG_PASSWORD_FILE="",VECTOR_PG_PORT="5432",VECTOR_PG_USERNAME="vector"
 
 # [program:db-node]
 [program:postgres]
-redirect_stderr=true
-stdout_logfile=/proc/1/fd/1
+autorestart=true
+stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
-autostart=true
-autorestart=false
-startretries=3
+redirect_stderr=true
+startretries=1
 priority=1
-command=bash -c "ls /home/postgres && cd / && sudo -u postgres /usr/lib/postgresql/9.6/bin/postgres -D /var/lib/postgresql/9.6/main -c config_file=/etc/postgresql/9.6/main/postgresql.conf"
+command=/usr/lib/postgresql/12/bin/postgres -D /var/lib/postgresql/12/main -c config_file=/etc/postgresql/12/main/postgresql.conf
 environment=HOME="/home/postgres",USER="postgres",AWS_ACCESS_KEY_ID="",AWS_SECRET_ACCESS_KEY="",POSTGRES_DB="vector",POSTGRES_PASSWORD="vector",POSTGRES_PASSWORD_FILE="",POSTGRES_USER="vector",VECTOR_ADMIN_TOKEN="cxt1234",VECTOR_ENV="dev"
 
 [program:router]
-redirect_stderr=true
-stdout_logfile=/proc/1/fd/1
-stdout_logfile_maxbytes=0
-autostart=true
 autorestart=true
-startretries=3
-priority=2
-command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && sleep 60 && wait-for -t 60 localhost:8001 && wait-for -t 60 localhost:80 && cd /root/router && /root/router/ops/entry.sh"
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+startretries=1
+priority=3
+command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && cd /root/router && /root/router/ops/entry.sh"
 environment=PORT="8008",VECTOR_ENV="dev",VECTOR_PROD="true",VECTOR_NODE_URL="http://node:8000",VECTOR_MNEMONIC="candy maple cake sugar pudding cream honey rich smooth crumble sweet treat",VECTOR_PG_DATABASE="vector",VECTOR_PG_HOST="postgres",VECTOR_PG_PASSWORD="vector",VECTOR_PG_PASSWORD_FILE="",VECTOR_PG_PORT="5432",VECTOR_PG_USERNAME="vector",VECTOR_PORT="8008"
 
 # [program:db-router]
@@ -40,7 +43,7 @@ environment=PORT="8008",VECTOR_ENV="dev",VECTOR_PROD="true",VECTOR_NODE_URL="htt
 # autorestart=false
 # startretries=3
 # priority=1
-# command=bash -c "ls /home/postgres && cd / && sudo -u postgres /usr/lib/postgresql/9.6/bin/postgres -D /var/lib/postgresql/9.6/main -c config_file=/etc/postgresql/9.6/main/postgresql.conf"
+# command=bash -c "ls /home/postgres && cd / && sudo -u postgres /usr/lib/postgresql/12/bin/postgres -D /var/lib/postgresql/12/main -c config_file=/etc/postgresql/12/main/postgresql.conf"
 # environment=HOME="/home/postgres",USER="postgres",AWS_ACCESS_KEY_ID="",AWS_SECRET_ACCESS_KEY="",POSTGRES_DB="vector",POSTGRES_PASSWORD="vector",POSTGRES_PASSWORD_FILE="",POSTGRES_USER="vector",VECTOR_ADMIN_TOKEN="cxt1234",VECTOR_ENV="dev"
 
 ##########################################################################################################################################################
@@ -51,7 +54,7 @@ stdout_logfile=/proc/1/fd/1
 stdout_logfile_maxbytes=0
 autostart=true
 autorestart=false
-startretries=3
-priority=3
+startretries=1
+priority=4
 command=nginx -g 'daemon off;'
 environment=ROUTER_HOST=8008,NODE_HOST=8002
