--- a/vector-container/supervisord.conf
+++ b/vector-container/supervisord.conf
@@ -11,7 +11,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 startretries=1
 priority=2
-command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && export PORT=8002 && cd /root/node && /root/node/ops/entry.sh"
+command=bash -c "export VECTOR_CONFIG=\"$(cat vector-config.json)\" && export PORT=8001 && cd /root/node && /root/node/ops/entry.sh"
 environment=PORT="8001",VECTOR_ENV="dev",VECTOR_PROD="true",VECTOR_MNEMONIC="candy maple cake sugar pudding cream honey rich smooth crumble sweet treat",VECTOR_MNEMONIC_FILE="",VECTOR_PG_DATABASE="vector",VECTOR_PG_HOST="postgres",VECTOR_PG_PASSWORD="vector",VECTOR_PG_PASSWORD_FILE="",VECTOR_PG_PORT="5432",VECTOR_PG_USERNAME="vector"
 
 # [program:db-node]
@@ -22,7 +22,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 startretries=1
 priority=1
-command=/usr/lib/postgresql/12/bin/postgres -D /var/lib/postgresql/12/main -c config_file=/etc/postgresql/12/main/postgresql.conf
+command=bash -c "ls /home/postgres && cd / && sudo -u postgres /usr/lib/postgresql/12/bin/postgres -D /var/lib/postgresql/12/main -c config_file=/etc/postgresql/12/main/postgresql.conf"
 environment=HOME="/home/postgres",USER="postgres",AWS_ACCESS_KEY_ID="",AWS_SECRET_ACCESS_KEY="",POSTGRES_DB="vector",POSTGRES_PASSWORD="vector",POSTGRES_PASSWORD_FILE="",POSTGRES_USER="vector",VECTOR_ADMIN_TOKEN="cxt1234",VECTOR_ENV="dev"
 
 [program:router]
