--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -1,5 +1,5 @@
 {
-    "galileo.logo": "https://cryptologos.cc/logos/ethereum-eth-logo.svg?v=010",
+    "galileo.logo": "https://storage.googleapis.com/mission_types/c37d3e16-e27f-4357-90e3-7ee1ea0c1486.png",
     "galileo.title": "Connext Vector Node",
     "galileo.description": "Say Hello to a Multichain Ethereum",
     "galileo.widget_label": "Vector Node Portal",
@@ -64,25 +64,10 @@
         "title": "Galileo APIs",
         "content": [
             {
-            "title": "🏃‍♂️ Relay API",
-            "href": "/relay/",
+            "title": "☁ Router API",
+            "href": "/restapi/",
             "priority": 0
             },
-            {
-            "title": "☁ Rest API",
-            "href": "/restapi/",
-            "priority": 1
-            },
-			{
-            "title": "📊 Node Metrics",
-            "href": "/restapi/metrics",
-            "priority": 2
-            },
-			{
-            "title": "🐛 Teal Debugger",
-            "href": "/tealdbg/",
-            "priority": 2
-            }
         ]
         }
     ],
