--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 
 [program:theia]
 priority=1
-command=node /theia/src-gen/backend/main.js /home/galileo --hostname=0.0.0.0
+command=node /theia/src-gen/backend/main.js --hostname=0.0.0.0
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
