--- a/router.config.json
+++ b/router.config.json
@@ -1,17 +1,14 @@
 {
-  "chainProviders": {"1":"https://eth-mainnet.alchemyapi.io/v2/_2mBX3HGWRFlLSg_2JeqBn3Ljlfn2hqU"},
   "logLevel": "info",
-  "messagingUrl": "https://messaging.connext.network",
   "port": 42069,
   "allowedSwaps": [],
   "rebalanceProfiles": [],
   "production": true,
-  "chainId":1,
   "assetId":"0x0000000000000000000000000000000000000000",
   "reclaimThreshold":"200000000000000000",
   "target":"100000000000000000",
   "collateralizeThreshold":"50000000000000000",
-  "adminToken": "asdf",
+  "adminToken": "viletortoiserabidhunter",
   "mnemonic": "candy maple cake sugar pudding cream honey rich smooth crumble sweet treat",
   "nodeUrl": "http://127.0.0.1:8000",
   "routerUrl": "http://127.0.0.1:42069"
